--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,21 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
+
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
 minecraft_version=1.21.4
+fabric_version=0.112.0+1.21.4
 yarn_mappings=1.21.4+build.2
 loader_version=0.16.9
+
+# Minecraft Mods
+## YACL (https://github.com/isXander/YetAnotherConfigLib)
+yacl_version=3.6.2+1.21.4
+## Mod Menu (https://modrinth.com/mod/modmenu/versions)
+mod_menu_version = 13.0.0-beta.1
+
 # Mod Properties
 mod_version=0.0.0
 maven_group=com.hazem
 archives_base_name=SkyPlus
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.111.0+1.21.4
