--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     branches:
-      - main  # Or the branch you want to trigger releases from
+      - master
 
 jobs:
   build:
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v3
 
       # Step 2: Set up Java (adjust the version if needed)
-      - name: Set up JDK 17
+      - name: Set up JDK 23
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: 23
           distribution: 'temurin'
 
       # Step 3: Build the project using Gradle
