--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -6,6 +6,11 @@ on:
       - master
   pull_request:
 
+env:
+  REF_NAME: ${{ github.ref_name }}
+  PR_NUMBER: ${{ github.event.number }}
+  PR_SHA: ${{ github.event.pull_request.head.sha }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,11 +18,11 @@ jobs:
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
-        uses: actions/checkout@latest
+        uses: actions/checkout@v4
 
       # Step 2: Get Jar name
       - name: Set Jar Name
-        uses: actions/github-script@latest
+        uses: actions/github-script@v7
         with:
           result-encoding: string
           script: |
@@ -38,7 +43,7 @@ jobs:
 
       # Step 2: Set up Java (adjust the version if needed)
       - name: Set up JDK 23
-        uses: actions/setup-java@latest
+        uses: actions/setup-java@v4
         with:
           java-version: 23
           distribution: 'temurin'
@@ -61,7 +66,7 @@ jobs:
 
       - name: Process artifacts
         uses: actions/github-script@v7
-        id: fname
+        id: name
         with:
           result-encoding: string
           script: |
@@ -71,5 +76,5 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.fname.outputs.result }}
+          name: ${{ steps.name.outputs.result }}
           path: build/libs/
